# src/routes.ts
@@ -4145,14 +4145,14 @@ export function RegisterRoutes(router: KoaRouter) {
             return promiseHandler(controller, promise, context, undefined, undefined);
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        router.post('/api/sprint-planning/:planningId/items/:itemId/status/:status',
+        router.post('/api/sprint-planning/:planningId/status/:status',
             authenticateMiddleware([{"jwt":[]}]),
             ...(fetchMiddlewares<Middleware>(SprintPlanningController)),
             ...(fetchMiddlewares<Middleware>(SprintPlanningController.prototype.updatePlanningItemStatus)),
 
             async function SprintPlanningController_updatePlanningItemStatus(context: any, next: any) {
             const args = {
-                    itemId: {"in":"path","name":"itemId","required":true,"dataType":"string"},
+                    planningId: {"in":"path","name":"planningId","required":true,"dataType":"string"},
                     status: {"in":"query","name":"status","required":true,"ref":"EPlanningItemStatus"},
             };
 
